--- a/video/index.html
+++ b/video/index.html
@@ -1,15 +1,24 @@
 <html>
 <head>
-<title> Live LUCINDO </title>
+<title>Evential's Office Cam1</title>
+	<style type="text/css"><!--
+		body {
+			font-family: arial,sans-serif;
+		}
+		body { 
+			margin: 35px;
+			background : white;
+		}
+	--></style>
 </head>
 
 <body>
+<h2>Evential's Office Cam1</h2>
 
 <div id="lws-player" 
      data-lws-stream="36701916841" data-lws-mode="video" 
      data-lws-width="640" data-lws-height="360">
 </div>
-
 <script src="//stream.locaweb.com.br/embed.js"></script>
 </body>
 </html>
