--- a/video/index.html
+++ b/video/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<h2>Evential's Office Cam1</h2>
+<h2>Evential's Office - Cam1</h2>
 
 <div id="lws-player" 
      data-lws-stream="36701916841" data-lws-mode="video" 
