--- a/radio/index.html
+++ b/radio/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
-<title> Radio Eventials </title>
+<title>Streaming Locaweb - Radio Test</title>
+<style type="text/css"><!--
+	body {
+	     font-family: arial,sans-serif;
+		margin: 30px;
+	}
+--></style>
 </head>
 
 <body>
