--- a/video/index.html
+++ b/video/index.html
@@ -11,10 +11,12 @@
 
 <body>
 <h2>Evential's Office - Cam1</h2>
+<script src="//stream.locaweb.com.br/embed.js"></script>
+ 
 <div id="lws-player" 
      data-lws-stream="36701916841" data-lws-mode="video" 
+     data-lws-server="//play-1.locaaovivo.com.br/"
      data-lws-width="640" data-lws-height="360">
 </div>
-<script src="//stream.locaweb.com.br/embed.js"></script>
 </body>
 </html>
