--- a/video/index.html
+++ b/video/index.html
@@ -14,8 +14,8 @@
 <script src="//stream.locaweb.com.br/embed.js"></script>
  
 <div id="lws-player" 
-     data-lws-stream="36701916841" data-lws-mode="video" 
-     data-lws-server="//play-1.locaaovivo.com.br/"
+     data-lws-stream="36701916388" data-lws-mode="video" 
+     data-lws-server="//server-1.locaaovivo.com.br/"
      data-lws-width="640" data-lws-height="360">
 </div>
 </body>
