--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>About</title>
-  <meta name="description" content="Renato Lucindo's blog
+  <meta name="description" content="Random posts written when I'm bored.
 ">
 
   <link rel="stylesheet" href="/css/main.css">
@@ -79,7 +79,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">Renato Lucindo</h2>
+    <!--h2 class="footer-heading">Renato Lucindo</h2-->
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
@@ -123,7 +123,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">Renato Lucindo's blog
+        <p class="text">Random posts written when I'm bored.
 </p>
       </div>
     </div>
